# TyperBot

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  generate_sql.py  import_historical.py  pyproject.toml  railway.toml  temp-pr-1.md
.github/workflows/: deploy.yml  tests.yml
archive/: README.md  example_import.sql
scripts/: migrate_add_thread_columns.py  restore_db.py
tests/: conftest.py  test_admin_commands.py  test_admin_panel.py  test_admin_service.py  test_bot.py  test_config.py  test_database.py  test_dm_prediction_handler.py  test_dm_router.py  test_fixture_handler.py  test_integration.py  test_prediction_parser.py  test_restore_db.py  test_results_handler.py  test_scoring.py  test_thread_prediction_handler.py  test_timezone.py  test_user_commands.py  test_workflow_state.py
typer_bot/: __init__.py  __main__.py  bot.py
typer_bot/commands/: __init__.py  admin_commands.py  user_commands.py
typer_bot/commands/admin_panel/: __init__.py  base.py  fixtures.py  modals.py  predictions.py  results.py
typer_bot/database/: __init__.py  connection.py  database.py  fixtures.py  predictions.py  results.py  scores.py
typer_bot/handlers/: __init__.py  base_dm_handler.py  dm_prediction_handler.py  fixture_handler.py  results_handler.py  thread_prediction_handler.py
typer_bot/services/: __init__.py  admin_service.py  dm_router.py  workflow_state.py
typer_bot/utils/: __init__.py  config.py  db_backup.py  logger.py  permissions.py  prediction_parser.py  scoring.py  timezone.py
