[project]
name = "typer-bot"
version = "0.1.0"
description = "Discord bot for football predictions"
requires-python = ">=3.13"
authors = [
    {name = "Typer Team"}
]
dependencies = [
    "discord-py>=2.6.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.22.0",
    "tzdata>=2024.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.14.0",
    "freezegun>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["typer_bot"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "ASYNC", "RET", "PTH", "ARG", "ERA"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
# Astral's type checker (ty) configuration
python-version = "3.13"
# Add any type-specific ignores here once we start fixing errors
# ignore = ["unresolved-attribute"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"